@@ -7,7 +7,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ets-gpkg12</artifactId>
-  <version>0.8-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>GeoPackage 1.2 Conformance Test Suite</name>
@@ -45,7 +45,13 @@
   <properties>
     <ets-code>gpkg12</ets-code>
     <spec-version>1.2</spec-version>
-    <docker.teamengine.version>5.3</docker.teamengine.version>
+    <soapui.test.fail.ignore>false</soapui.test.fail.ignore>
+    <soapui.teamengine.endpoint>http://localhost:8081/teamengine</soapui.teamengine.endpoint>
+    <soapui.iut>http://www.geopackage.org/data/sample1_2.gpkg</soapui.iut>
+    <soapui.tests.passed>55</soapui.tests.passed>
+    <soapui.tests.skipped>41</soapui.tests.skipped>
+    <soapui.tests.failed>1</soapui.tests.failed>
+    <docker.teamengine.version>5.4</docker.teamengine.version>
   </properties>
 
   <dependencies>
@@ -80,7 +86,7 @@
       <version>1.3.1</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>1.3.2</version>
     </dependency>
@@ -92,10 +98,11 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.10.3</version>
         <configuration>
+          <source>8</source>
           <docfilessubdirs>true</docfilessubdirs>
           <show>package</show>
           <links>
-            <link>http://testng.org/javadocs/</link>
+            <link>https://javadoc.jitpack.io/com/github/cbeust/testng/master/javadoc/</link>
           </links>
         </configuration>
         <executions>
@@ -131,8 +138,15 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-      </plugin>
+        <version>2.22.0</version>
+        <configuration>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        </configuration>
+        </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -188,56 +202,130 @@
         </configuration>
       </plugin>
     </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>io.fabric8</groupId>
+          <artifactId>docker-maven-plugin</artifactId>
+          <version>0.28.0</version>
+          <configuration>
+            <images>
+              <image>
+                <name>ogccite/${project.artifactId}</name>
+                <build>
+                  <dockerFileDir>${project.basedir}/src/docker</dockerFileDir>
+                  <tags>
+                    <tag>${project.version}-teamengine-${docker.teamengine.version}</tag>
+                  </tags>
+                  <assembly>
+                    <inline>
+                      <fileSets>
+                        <fileSet>
+                          <directory>${project.build.directory}</directory>
+                          <outputDirectory>.</outputDirectory>
+                          <includes>
+                            <include>dependency/*teamengine-*.war</include>
+                            <include>dependency/*teamengine-*.zip</include>
+                            <include>*ets-*.zip</include>
+                          </includes>
+                        </fileSet>
+                      </fileSets>
+                    </inline>
+                  </assembly>
+                </build>
+                <run>
+                  <ports>
+                    <port>8081:8080</port>
+                  </ports>
+                  <wait>
+                    <http>
+                      <url>http://localhost:8081/teamengine</url>
+                    </http>
+                    <time>120000</time>
+                  </wait>
+                </run>
+              </image>
+            </images>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.0.0</version>
+          <configuration>
+            <artifactItems>
+              <artifactItem>
+                <groupId>org.opengis.cite.teamengine</groupId>
+                <artifactId>teamengine-web</artifactId>
+                <version>${docker.teamengine.version}</version>
+                <type>war</type>
+              </artifactItem>
+              <artifactItem>
+                <groupId>org.opengis.cite.teamengine</groupId>
+                <artifactId>teamengine-web</artifactId>
+                <version>${docker.teamengine.version}</version>
+                <classifier>common-libs</classifier>
+                <type>zip</type>
+              </artifactItem>
+              <artifactItem>
+                <groupId>org.opengis.cite.teamengine</groupId>
+                <artifactId>teamengine-console</artifactId>
+                <version>${docker.teamengine.version}</version>
+                <classifier>base</classifier>
+                <type>zip</type>
+              </artifactItem>
+            </artifactItems>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>com.smartbear.soapui</groupId>
+          <artifactId>soapui-maven-plugin</artifactId>
+          <version>5.5.0</version>
+          <dependencies>
+            <dependency>
+              <groupId>com.jgoodies</groupId>
+              <artifactId>forms</artifactId>
+              <version>1.0.7</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <projectFile>src/test/resources/soapui/ets-gpkg12-soapui-project.xml</projectFile>
+            <settingsFile>src/test/resources/soapui/ets-gpkg12-soapui-settings.xml</settingsFile>
+            <outputFolder>${project.build.directory}/soapui</outputFolder>
+            <junitReport>true</junitReport>
+            <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
+            <projectProperties>
+              <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
+              <value>iut=${soapui.iut}</value>
+              <value>tests.passed=${soapui.tests.passed}</value>
+              <value>tests.skipped=${soapui.tests.skipped}</value>
+              <value>tests.failed=${soapui.tests.failed}</value>
+            </projectProperties>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <profiles>
     <profile>
-      <id>docker</id>
+      <id>integration-tests</id>
       <build>
         <plugins>
           <plugin>
+            <groupId>com.smartbear.soapui</groupId>
+            <artifactId>soapui-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
             <groupId>io.fabric8</groupId>
             <artifactId>docker-maven-plugin</artifactId>
-            <version>0.26.1</version>
-            <configuration>
-              <images>
-                <image>
-                  <name>opengeospatial/${project.artifactId}</name>
-                  <build>
-                    <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
-                    <tags>
-                      <tag>${project.version}-teamengine-${docker.teamengine.version}</tag>
-                    </tags>
-                    <assembly>
-                      <inline>
-                        <fileSets>
-                          <fileSet>
-                            <directory>${project.build.directory}</directory>
-                            <outputDirectory>.</outputDirectory>
-                            <includes>
-                              <include>dependency/*teamengine-*.war</include>
-                              <include>dependency/*teamengine-*.zip</include>
-                              <include>*ets-*.zip</include>
-                            </includes>
-                          </fileSet>
-                        </fileSets>
-                      </inline>
-                    </assembly>
-                  </build>
-                  <run>
-                    <ports>
-                      <port>8081:8080</port>
-                    </ports>
-                    <wait>
-                      <http>
-                        <url>http://localhost:8081/teamengine</url>
-                      </http>
-                      <time>120000</time>
-                    </wait>
-                  </run>
-                </image>
-              </images>
-            </configuration>
             <executions>
               <execution>
                 <id>start</id>
@@ -255,49 +343,55 @@
                   <goal>remove</goal>
                 </goals>
               </execution>
-              <execution>
-                <id>build</id>
-                <goals>
-                  <goal>build</goal>
-                </goals>
-              </execution>
             </executions>
           </plugin>
           <plugin>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.0</version>
             <executions>
               <execution>
                 <goals>
-                  <goal>copy-dependencies</goal>
+                  <goal>copy</goal>
                 </goals>
               </execution>
             </executions>
           </plugin>
         </plugins>
       </build>
-      <dependencies>
-        <dependency>
-          <groupId>org.opengis.cite.teamengine</groupId>
-          <artifactId>teamengine-web</artifactId>
-          <version>${docker.teamengine.version}</version>
-          <type>war</type>
-        </dependency>
-        <dependency>
-          <groupId>org.opengis.cite.teamengine</groupId>
-          <artifactId>teamengine-web</artifactId>
-          <version>${docker.teamengine.version}</version>
-          <classifier>common-libs</classifier>
-          <type>zip</type>
-        </dependency>
-        <dependency>
-          <groupId>org.opengis.cite.teamengine</groupId>
-          <artifactId>teamengine-console</artifactId>
-          <version>${docker.teamengine.version}</version>
-          <classifier>base</classifier>
-          <type>zip</type>
-        </dependency>
-      </dependencies>
+    </profile>
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>build</id>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>push</id>
+                <goals>
+                  <goal>push</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>release</id>
@@ -328,6 +422,12 @@
     </profile>
   </profiles>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>smartbear-sweden-plugin-repository</id>
+      <url>http://www.soapui.org/repository/maven2/</url>
+    </pluginRepository>
+  </pluginRepositories>
   <distributionManagement>
     <repository>
       <id>sonatype-nexus-staging</id>
